--- a/Assignment_Integers,_Floats_&_Booleans.ipynb
+++ b/Assignment_Integers,_Floats_&_Booleans.ipynb
@@ -20,10 +20,21 @@
       "version": "3.7.4"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/solankinitin1210/Python-Assignments/blob/main/Assignment_Integers%2C_Floats_%26_Booleans.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -70,7 +81,7 @@
       },
       "source": [
         "# Calculate the total points gained by Team Aravali\n",
-        "aravali_points ="
+        "aravali_points = (wins*3)+(losses*0)+(draws*1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -78,13 +89,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4ccas7cPDelf"
+        "id": "4ccas7cPDelf",
+        "outputId": "9175bba4-ccd5-4910-ba69-0aa064156452",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Print the variable aravali_points\n"
+        "# Print the variable aravali_points\n",
+        "print(aravali_points)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -107,7 +131,8 @@
       },
       "source": [
         "# Calculate the value of the function f(x) at x = 2\n",
-        "func_evaluated_at_2 ="
+        "x=2\n",
+        "func_evaluated_at_2 = (x**2)+(3*x)-4"
       ],
       "execution_count": null,
       "outputs": []
@@ -115,13 +140,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zBkLIXk2Dell"
+        "id": "zBkLIXk2Dell",
+        "outputId": "1ad86f83-dc73-471a-f1c1-f8d2cee2e56b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Print the value below\n"
+        "# Print the value below\n",
+        "print(func_evaluated_at_2)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -130,7 +168,8 @@
       },
       "source": [
         "# Calculate the value of the function f(x) at x = -1\n",
-        "func_evaluated_at_minus1 ="
+        "x=-1\n",
+        "func_evaluated_at_minus1 = (x**2)+(3*x)-4"
       ],
       "execution_count": null,
       "outputs": []
@@ -138,13 +177,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jx9WVMQ2Delq"
+        "id": "Jx9WVMQ2Delq",
+        "outputId": "958fb1c4-ea38-465a-f842-335ae38bb917",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Print the value below\n"
+        "# Print the value below\n",
+        "print(func_evaluated_at_minus1)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -153,7 +205,8 @@
       },
       "source": [
         "# Calculate the value of the function f(x) at x = 1\n",
-        "func_evaluated_at_1 ="
+        "x=1\n",
+        "func_evaluated_at_1 = (x**2)+(3*x)-4"
       ],
       "execution_count": null,
       "outputs": []
@@ -161,13 +214,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BdrFgug6Delw"
+        "id": "BdrFgug6Delw",
+        "outputId": "1558a99e-c228-4a76-9e14-9591cf4113b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Print the type of the variable below\n"
+        "# Print the type of the variable below\n",
+        "print(func_evaluated_at_1)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,36 +247,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-tUSAgzgDel0"
+        "id": "-tUSAgzgDel0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dc872936-318b-4bbc-e742-9235779f8c46"
       },
       "source": [
         "# Check whether 2 is a root of f(x)\n",
+        "x=2\n",
+        "func_evaluated_at_2 = (x**2)+(3*x)-4\n",
         "func_evaluated_at_2 == 0"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gsNS4Ki4Del2"
+        "id": "gsNS4Ki4Del2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a798a7ad-450a-4e87-de65-e29d3d21b7f5"
       },
       "source": [
-        "# Check whether -1 is a root of f(x)\n"
+        "# Check whether -1 is a root of f(x)\n",
+        "x=-1\n",
+        "func_evaluated_at_minus1 = (x**2)+(3*x)-4\n",
+        "func_evaluated_at_minus1 == 0"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yExDY-ZXDel4"
+        "id": "yExDY-ZXDel4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76789d7c-fdb9-4307-8725-9141ca503637"
       },
       "source": [
-        "# Check whether 1 is a root of f(x)\n"
+        "# Check whether 1 is a root of f(x)\n",
+        "x=1\n",
+        "func_evaluated_at_1 = (x**2)+(3*x)-4\n",
+        "func_evaluated_at_1 == 0\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -225,39 +344,92 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a=45\n",
+        "o=65\n",
+        "b=30\n",
+        "total=a+o+b"
+      ],
       "metadata": {
-        "id": "XJ9Rq4P3Del7"
+        "id": "TZl0J5zBQQOm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XJ9Rq4P3Del7",
+        "outputId": "f30dc81c-387b-42e9-9971-db676e73a6b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Calculate the percentage of apples and print the variable\n",
-        "\n"
+        "apple_Per= (a*100)/total\n",
+        "print(apple_Per)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "32.142857142857146\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S6lJZtaXDel9"
+        "id": "S6lJZtaXDel9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77d89f52-b5c0-4dfa-ff13-586e486eca9b"
       },
       "source": [
         "# Calculate the percentage of oranges and print the variable\n",
-        "\n"
+        "orange_Per= (o*100)/total\n",
+        "print(orange_Per)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "46.42857142857143\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mHzMnSZrDemB"
+        "id": "mHzMnSZrDemB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7bef7eea-4b9f-476b-dbbc-ad7d65787c92"
       },
       "source": [
         "# Calculate the percentage of bananas and print the variable\n",
-        "\n"
+        "banana_Per= (b*100)/total\n",
+        "print(banana_Per)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "21.428571428571427\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,21 +466,22 @@
       },
       "source": [
         "# Store the number of Maths majors\n",
-        "\n",
+        "math_major=30\n",
         "\n",
         "# Store the number of Economics majors\n",
-        "\n",
+        "eco_major=45\n",
         "\n",
         "# Store the number of Physics majors\n",
-        "\n",
+        "phy_major=25\n",
         "\n",
         "# Store the number of your correct guesses of Maths majors\n",
-        "\n",
+        "math_cor=20\n",
         "\n",
         "# Store the number of your correct guesses of Economics majors\n",
+        "eco_cor=30\n",
         "\n",
-        "\n",
-        "# Store the number of your correct guesses of Physics majors\n"
+        "# Store the number of your correct guesses of Physics majors\n",
+        "phy_cor=20"
       ],
       "execution_count": null,
       "outputs": []
@@ -325,38 +498,77 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QUbDKOR3DemJ"
+        "id": "QUbDKOR3DemJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "91e896ae-14f4-4533-b610-8263d07bed34"
       },
       "source": [
         "# Print the Maths accuracy\n",
-        "\n"
+        "math_acc = (math_cor*100)/math_major\n",
+        "print(math_acc)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "66.66666666666667\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PfX4DowhDemM"
+        "id": "PfX4DowhDemM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "93c6fe1b-c884-46de-947f-d3af442b430d"
       },
       "source": [
         "# Print the Economics accuracy\n",
-        "\n"
+        "eco_acc = (eco_cor*100)/eco_major\n",
+        "print(eco_acc)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "66.66666666666667\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZV-hzGKCDemP"
+        "id": "ZV-hzGKCDemP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ddfd172-cbd5-4b5f-9501-c616bad47eb3"
       },
       "source": [
         "# Print the Physics accuracy\n",
-        "\n"
+        "phy_acc = (phy_cor*100)/phy_major\n",
+        "print(phy_acc)\n"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "80.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -370,14 +582,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eP3JkusLDemT"
+        "id": "eP3JkusLDemT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d5e52ea-0ac5-4183-9d95-865c141b9498"
       },
       "source": [
         "# Print the overall accuracy\n",
-        "\n"
+        "total_part = math_major+eco_major+phy_major\n",
+        "total_cor =  math_cor+eco_cor+phy_cor\n",
+        "total_cc = (total_cor*100)/total_part\n",
+        "print(total_cc)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "70.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
